# fern

./: .gitignore  CONTRIBUTING.md  LICENCE  README.md  build.sh  example.c  fern-cli.sh  fern.c  fern_wasm.c  template.html
docs/: MAN  migration-guide.md
examples/: cloud.c  life_sim.c  template.html  white_board.c
examples/c/: cyberpunk.c  fractal_explorer.c
examples/cpp/: basic_example.cpp
src/cpp/: CMakeLists.txt
src/cpp/include/fern/: fern.hpp
src/cpp/include/fern/core/: canvas.hpp  input.hpp  signal.hpp  types.hpp  widget_manager.hpp
src/cpp/include/fern/graphics/: colors.hpp  primitives.hpp
src/cpp/include/fern/text/: font.hpp
src/cpp/include/fern/ui/: button.hpp  container.hpp  widget.hpp  widgets.hpp
src/cpp/src/core/: canvas.cpp  fern.cpp  input.cpp
src/cpp/src/graphics/: colors.cpp  primitives.cpp
src/cpp/src/text/: font.cpp  font_data.cpp  font_data.hpp
src/cpp/src/ui/: button.cpp  container.cpp  widgets.cpp
